--- a/src/Pages/Transaction.css
+++ b/src/Pages/Transaction.css
@@ -107,7 +107,7 @@ margin-bottom: 25px;
 
 
 }
-.leftt select{
+.SELECT{
     width: 90%;
     padding-left: 5%;
     height: 5vh;
@@ -139,4 +139,20 @@ color: rgba(0, 0, 0, 0.73);
 .rightt label{
     margin-left: 10px;
     color: rgba(0, 0, 0, 0.579);
+}
+.types{
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin-top: 20PX;
+    height: 50%;
+    justify-content: space-around;
+
+}
+.SELECT2{
+    border: none;
+    height: 10%;
+    outline: none;
+    color: rgba(0, 0, 0, 0.793);
+    font-weight: 800;
 }
