--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -38,7 +38,7 @@
     border-color: rgba(0, 98, 255, 0.809);
 }
 .Bottom{
-    background-color: aqua;
+    background-color: rgba(219, 216, 216, 0.351);
     width: 100%;
     height:90vh;
     display: flex;
@@ -55,19 +55,65 @@
     margin: 3vh 0 ;
 }
 .bigDash{
-    background-color: blue;
+    
     width: 100%;
     height: 70%;
    display: flex;
    flex-direction: row;
-   justify-content: space-between;
-   align-items: center;
+   justify-content: space-around;
+
 }
 .bigDash div{
-    background-color: red;
+   
     width: 40vw;
     height: 60%;
     margin-left: 6%;
     margin-right: 2.5%;
 }
-
+.dashboard{
+    background-color:white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    
+}
+.dashboard h2{
+    font-size: medium;
+    margin-left: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.191);
+}
+.dashboard1{
+    background-color:white;
+    border-radius: 10px;
+}
+.dashboard1 h2{
+    font-size: medium;
+    margin-left: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.191);
+}
+.DAY{
+    color: rgba(0, 0, 0, 0.448);
+    margin-bottom: 3px;
+}
+.devise{
+    font-weight: bold;
+    font-size: larger;
+}
+.dashboard2{
+    background-color: white;
+    border-radius: 10px;
+}
+.dashboard2 h2{
+    font-size: medium;
+    margin-left: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.191);
+}
