--- a/src/Components/Form/Formulaire.css
+++ b/src/Components/Form/Formulaire.css
@@ -4,18 +4,20 @@
     padding: 0;
 }
 .containers{
-    background-color: rgb(242, 246, 246);
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba(185, 185, 185, 0.51);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
 }
 form{
     background-color:white;
     width: 35%;
-    height: 67%;
+    height: 48%;
     display: flex;
     flex-direction: column;
     font-family: "Roboto Condensed", sans-serif;
@@ -60,15 +62,13 @@ form h1{
    padding-left: 5px;
    border: rgba(0, 0, 0, 0.271) 0.5px solid;
 }
-.details p{
+.details p, .choose{
     margin-left: 10px;
     font-size: small;
     margin-bottom: 3px;
 }
 .button{
-
     width: 30%;
-    height: 5vh;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -79,7 +79,19 @@ form h1{
     height:100% ;
     border: none;
     border-radius: 20px;
-    background-color: black;
+    background-color: rgb(107 152 179);
     color: white;
     margin-top: 30%;
+    cursor: pointer;
+}
+.addAccount{
+    height: 45px !important;
+}
+.bankList{
+    display: flex;
+    margin-top: 1rem;
+    justify-content: space-around;
+}
+.bankName{
+    cursor: pointer;
 }
